<resources>
    <string name="app_name">Education</string>
    <string name="to_second_page">to second page</string>
    <string name="increase_count">increase count</string>
    <string name="swap_color">swap color</string>
    <string name="count_0">Count: %1$s</string>
    <string name="phone_hint">Phone</string>
    <string name="bio_hint">Bio</string>
    <string name="to_rectangles_btn">to rectangles</string>
    <string name="to_third_page">to third page</string>
    <string name="random_number">random number</string>
    <string name="handler">Handler</string>
    <string name="big_text">BigText</string>
    <string name="message">Message</string>
    <string name="timeout">TimeOut</string>
    <string name="show_notification">Show Notification</string>
    <string name="revoke_notification">Revoke Notification</string>
    <string name="show_time_last_restart">Show time last restart</string>
    <string name="default_chanel">First chanel</string>
    <string name="start_fs">start FS</string>
    <string name="set_img">Set Notify IMG</string>
    <string name="set_iv_img">Set IV IMG</string>
    <string name="stop_fs">Stop FS</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="log_in">Log In</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log Out</string>
    <string name="setting_1">Setting 1</string>
    <string name="setting_2">Setting 2</string>
    <string name="setting_3">Setting 3</string>
    <string name="save_settings">Save Settings</string>
    <string name="preload_img">preload img</string>
    <string name="img">IMG</string>
    <string name="nameCity_pattern">City: %1$s</string>
    <string name="temp_pattern">%1$s \'</string>
    <string name="humidity_pattern">Humidity: %1$s</string>
    <string name="pressure_pattern">Pressure: %1$s</string>
    <string name="wind_speed_pattern">Wind speed: %1$s</string>
    <string name="search_by_gps">search by gps</string>
    <string name="search_by_city">search by city</string>
    <string name="search_city">Search city</string>
    <string name="icon_weather">Icon Weather</string>
</resources>
