<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/number_et"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="8dp"

        android:hint="@string/phone_hint"
        android:inputType="phone"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/biography_et"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"

        android:hint="@string/bio_hint"
        android:inputType="text"

        android:enabled="false"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_et" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_rectangles"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"

        android:text="@string/to_rectangles_btn"

        android:enabled="false"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biography_et" />







</androidx.constraintlayout.widget.ConstraintLayout>